Fix dark mode for Differential Revision size indicators
Summary:
Introduce a bunch of variables instead of hardcoding colors.

Refs T15056

Test Plan:
1. Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
2. Have some open Revisions in Differential with different sizes, go to http://phorge.localhost/differential/query/all/

Reviewers: O1 Blessed Committers, amybones, mainframe98

Reviewed By: O1 Blessed Committers, amybones, mainframe98

Subscribers: amybones, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26197

--- a/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
+++ b/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
@@ -702,21 +702,21 @@ ul.phui-oi-list-view .phui-oi-selectable
 }
 
 .differential-revision-large {
-  background: {$sh-orangebackground};
+  background: {$diffsize.large.background};
 }
 
 /* NOTE: These are intentionally using nonstandard colors, see T13127. */
 
 .differential-revision-large .phui-icon-view {
-  color: #e5ae7e;
+  color: {$diffsize.large.icon};
 }
 
 .differential-revision-small {
-  background: #f2f7ff;
+  background: {$diffsize.small.background};
 }
 
 .differential-revision-small .phui-icon-view {
-  color: #6699ba;
+  color: {$diffsize.small.icon};
 }
 
 .phui-oi-tail {
